--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@mdi/font": "^7.4.47",
     "@types/webpack-env": "^1.18.4",
     "axios": "^1.6.3",
+    "firebase": "^10.7.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
-    "vuetify": "^3.4.8"
+    "vuetify": "^3.4.8",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
