--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.3",
     "firebase": "^10.7.1",
     "vue": "^3.3.11",
+    "vue-history-state": "^0.14.0",
     "vue-router": "^4.2.5",
     "vuetify": "^3.4.8",
     "vuex": "^4.1.0"
